--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/seedrandom": "^3.0.8",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "seedrandom": "^3.0.5"
   }
 }
