--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true, 
+    "noUnusedParameters": true,
+    "noUnusedLocals": true
   },
   "include": ["src"]
 }
